# teafactory

./: .gitignore
ansible/: .yamllint.yml  Makefile  ansible.cfg  pyproject.toml  site.yml
ansible/group_vars/all/: dotfiles.yml  packages.yml  user.yml
ansible/inventories/: hosts.ini
ansible/inventories/group_vars/: admin.yml  all.yml  client.yml  laptops.yml  testvm.yml  testvms.yml  uni.yml  work.yml
ansible/playbooks/: full.yml  mini.yml
ansible/roles/: lib_dump.txt
ansible/roles/03_desktop/tasks/: main.yml
ansible/roles/07_dotfiles/tasks/: main.yml
ansible/roles/apps/defaults/: main.yml
ansible/roles/apps/tasks/: main.yml
ansible/roles/baseline/defaults/: main.yml
ansible/roles/baseline/tasks/: main.yml
ansible/roles/bootstrap/defaults/: main.yml
ansible/roles/bootstrap/handlers/: main.yml
ansible/roles/bootstrap/tasks/: main.yml
ansible/roles/bootstrap/templates/: pacman.conf.j2  reflector.conf.j2
ansible/roles/desktop/defaults/: main.yml
ansible/roles/desktop/tasks/: dm.yml  gpu.yml  kde.yml  main.yml  qtile.yml  shared.yml
ansible/roles/devtools/defaults/: main.yml
ansible/roles/devtools/tasks/: main.yml
ansible/roles/dotfiles/defaults/: main.yml
ansible/roles/dotfiles/tasks/: apply_link.yml  apply_target_file.yml  ensure.yml  ensure_dir.yml  ensure_file.yml  main.yml
ansible/roles/hardware/defaults/: main.yml
ansible/roles/hardware/handlers/: main.yml
ansible/roles/hardware/tasks/: bluetooth.yml  fwupd.yml  laptop.yml  logitech.yml  main.yml  printer.yml  zsa.yml
ansible/roles/secrets_mgmt/defaults/: main.yml
(+23 files in other folders)
