[project]
name = "teafactory"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.2.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=26.1.0",
    "bump-my-version>=1.2.6",
    "yamllint>=1.37.1",
]

[tool.bumpversion]
current_version = "2026.1.17"
parse = """(?x)                     # Verbose mode
    (?P<release>                    # The release part
        (?:[1-9][0-9]{3})\\.        # YYYY.
        (?:1[0-2]|[1-9])\\.         # MM.
        (?:3[0-1]|[1-2][0-9]|[1-9]) # DD
    )
    (?:\\.(?P<patch>\\d+))?         # .patch, optional
"""
serialize = ["{release}.{patch}", "{release}"]

[tool.bumpversion.parts.release]
calver_format = "{YYYY}.{MM}.{DD}"
